form delete button css fixed, avatar delete button visibility fix

--- a/assets/css/frontend-forms.less
+++ b/assets/css/frontend-forms.less
@@ -271,7 +271,7 @@ ul.wpuf-form {
                         text-align: center;
                     }
 
-                    a.attachment-delete {
+                    a.attachment-delete,a.wpuf-delete-avatar {
                         text-decoration: none;
                         padding: 3px 12px;
                         border: 1px solid #C47272;
